added the buttons functionality

--- a/Mutual Help.html
+++ b/Mutual Help.html
@@ -54,6 +54,14 @@
     <a href="Mutual%20Help.html"><button id="button2" class="button button2"></button></a>
 </div>
 
+<div id="navMyProfile">
+    <ul class="navUL">
+        <li class="navLi"><a href="#">Create New Post</a></li>
+        <li class="navLi"><a href="createNewEvent.html">Create New Event</a></li>
+        <li class="navLi"><a href="#">My Posts</a></li>
+    </ul>
+</div>
+
 <script src="scripts/backgroundChange.js"></script>
 </body>
 
