--- a/Mutual Help.html
+++ b/Mutual Help.html
@@ -56,7 +56,7 @@
 
 <div id="navMyProfile">
     <ul class="navUL">
-        <li class="navLi"><a href="#">Create New Post</a></li>
+        <li class="navLi"><a href="createnewpost.html">Create New Post</a></li>
         <li class="navLi"><a href="createNewEvent.html">Create New Event</a></li>
         <li class="navLi"><a href="#">My Posts</a></li>
     </ul>
