create event form fixed (still not  very responsive)

--- a/createNewEvent.html
+++ b/createNewEvent.html
@@ -90,11 +90,10 @@
     <br>
     <div>
         <label class="lable">Additional Content:</label>
-    </div>
-    <div>
         <textarea class="content" name="addContent" cols="40" rows="7" placeholder="Specify Your Event"></textarea>
     </div>
     <br>
+    <button class="submitButtons" type="reset" style="margin-left: 10vw;">Cancel</button>
     <button class="submitButtons" type="submit">Submit</button>
 </form>
 
