--- a/Entertainment.html
+++ b/Entertainment.html
@@ -62,6 +62,21 @@
         <li class="navLi"><a href="#">My Posts</a></li>
     </ul>
 </div>
+<main>
+    <article>
+        <div class="row1">
+            <h2>Header</h2>
+            <small class="author">Bogdan Alov</small>
+            <small class="author">24/11/2016 4:20 </small>
+            <div class="article_position">
+                There's been a fair bit of hype surrounding the latest SpaceX upright rocket landing. Simple as it seems, the excitement Sci-Fi Today, Reality TV Tomorrow, at least for me, stems from how the feat has brought us one step closer to fulfilling our sci-fi fantasies - etched into our minds by the many blockbuster flicks Hollywood has produced. If you can recall one of the opening scenes of The Martian, we witnessed the Mars Ascent Vehicle (MAV) lifting off, attempting to escape an ensuing dust storm. While most of the focus was on the misfortune of Mark Watney - played by Matt Damon, left behind after being struck by debris, you could say we took for granted how easily the MAV ascended into space. Combine the thought of how the MAV got there in the first place, and you have yourself a similar parallel to the SpaceX launch and landing. So what am I gettination. This applies not just to space travel, but every other area of technological advancement.
+            </div>
+            <footer >
+                <button><a href="#">Read more &raquo;</a></button>
+            </footer>
+        </div>
+    </article>
+</main>
 <script src="scripts/backgroundChange.js"></script>
 </body>
 
