new event view added

--- a/myevents.html
+++ b/myevents.html
@@ -64,6 +64,17 @@
 </div>
 
 
+<fieldset  class="eventView">
+    <h2>Event Description</h2>
+    <small>Author here(will user user name)</small><br>
+    <small>Event Place</small><br>
+    <small>Event Type </small><br>
+    <small>date here</small>
+    <p>
+        Additional Content Here Additional Content HereAdditional Content HereAdditional Content HereAdditional Content HereAdditional Content HereAdditional Content Here
+    </p>
+</fieldset>
+
 <script src="scripts/backgroundChange.js"></script>
 </body>
 </html>
