Updated 'Create Post form' (not very responsive)

--- a/createnewpost.html
+++ b/createnewpost.html
@@ -57,13 +57,13 @@
 </div>
 <form class="formEvent">
     <div>
-        <label class="lable textbox3">Title: </label>
-        <input class="content textbox2" type="text" placeholder="Choose a title">
+        <label class="lable">Title: </label>
+        <input class="content" type="text" placeholder="Choose a title">
     </div>
     <br>
     <div class="eventType" >
-        <label class="lable textbox3 ">Choose Caregory: </label>
-        <select name="type " class="content textbox2">
+        <label class="lable">Choose Caregory: </label>
+        <select name="type " class="content">
             <option value="patrol">Entertainment</option>
             <option value="meeting">Mutual Help</option>
             <option value="gathering">Science</option>
@@ -71,13 +71,11 @@
     </div>
     <br>
     <div>
-        <label class="lable textbox3 edit">Content:</label>
-    </div>
-    <div>
-        <textarea class="content textbox" name="addContent" cols="60" rows="10"></textarea>
+        <label class="lable">Content:</label>
+        <textarea class="content" name="addContent" cols="40" rows="10" placeholder="Enter Content"></textarea>
     </div>
     <br>
-    <button class="submitButtons" type="submit">Submit</button>
+    <button class="submitButtons" type="submit" style="margin-left: 13vw;">Submit</button>
 </form>
 <script src="scripts/backgroundChange.js"></script>
 </body>
