added changes to ChangePassword.html

--- a/Entertainment.html
+++ b/Entertainment.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="css/communities.css">
+    <link rel="stylesheet" type="text/css" href="./css/communities.css">
     <title>Entertainment</title>
 </head>
-
 <body>
 <header>
 <div id="profile_div">
@@ -50,11 +49,10 @@
 <div id="navMyProfile">
     <ul class="navUL">
         <li class="navLi"><a href="#">Create New Post</a></li>
-        <li class="navLi"><a href="#">Create New Event</a></li>
+        <li class="navLi"><a href="createNewEvent.html">Create New Event</a></li>
         <li class="navLi"><a href="#">My Posts</a></li>
     </ul>
 </div>
-<main>
 <article>
     <div class="row">
         <h2>Header</h2>
@@ -94,7 +92,7 @@
             </footer>
         </div>
     </article>
-</main>
+
 <footer >
     <div class="the_footer">
     <h3>© 2016 - SocialMegazord inc.</h3>
