FIXED MANY THINGS

--- a/ChangeImage.html
+++ b/ChangeImage.html
@@ -59,7 +59,7 @@
     </ul>
 </div>
 
-<div id="settings">
+<div id="settings2">
     <form class="form-horizontal">
         <fieldset>
             <legend>Change image</legend>
@@ -72,7 +72,7 @@
     </form>
 </div>
 <footer >
-    <div class="the_footer">
+    <div class="the_footer2">
         <h3>© 2016 - SocialMegazord inc.</h3>
     </div>
 </footer>
