--- a/Settings.html
+++ b/Settings.html
@@ -56,7 +56,7 @@
 </div>
 
 <footer >
-    <div class="the_footer">
+    <div class="the_footer2">
         <h3>© 2016 - SocialMegazord inc.</h3>
     </div>
 </footer>
