--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     </div>
 
     <div id="contents">
-        <a href="Entertainment.html" class="button button1"><h2>Entertainment</h2></a>
-        <a href="science.html" class="button button3"><h2>Science</h2></a>
-        <a href="Mutual%20Help.html"class="button button2"><h2>Mutual Help</h2></a>
+        <a href="Entertainment.html"><button id="button1" class="button button1">Entertainment</button></a>
+        <a href="science.html"><button id="button3" class="button button3"></button>Science</a>
+        <a href="Mutual%20Help.html"><button id="button2" class="button button2">Mutual Help</button></a>
     </div>
 <footer >
 <div class="the_footer">
