--- a/Entertainment.html
+++ b/Entertainment.html
@@ -3,15 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./css/communities.css">
+    <script src="scripts/jquery-3.1.1.min.js"></script>
     <title>Entertainment</title>
 </head>
+<style>
+    body{
+        background-image: url("images/entertainment.jpg");
+        position: relative;
+        background-color: white;
+        background-size: cover;
+    }
+</style>
 <body>
-<header>
-<div id="profile_div">
+<header class="nav">
     <ul class="profile-wrapper">
         <li>
             <div class="profile">
-                <a href ="index.html" class="name">UserExample</a>
+                <a href ="index.html" class="name" class="username">UserExample</a>
                 <ul class="menu">
                     <li>
                         <a href="#">My profile</a>
@@ -38,21 +46,20 @@
             </div>
         </li>
     </ul>
-</div>
-
-<div id="contents">
-    <a href="Entertainment.html"><button class="button button1"></button></a>
-    <a href="Mutual%20Help.html"><button class="button button2"></button></a>
-    <a href="science.html"><button class="button button3"></button></a>
-</div>
+    <div id="contents">
+        <a href="Entertainment.html"><button id="button1" class="button button1"></button></a>
+        <a href="science.html"><button id="button3" class="button button3"></button></a>
+        <a href="Mutual%20Help.html"><button id="button2" class="button button2"></button></a>
+    </div>
+    <div id="navMyProfile">
+        <ul class="navUL">
+            <li class="navLi"><a href="#">Create New Post</a></li>
+            <li class="navLi"><a href="createNewEvent.html">Create New Event</a></li>
+            <li class="navLi"><a href="#">My Posts</a></li>
+        </ul>
+    </div>
     </header>
-<div id="navMyProfile">
-    <ul class="navUL">
-        <li class="navLi"><a href="#">Create New Post</a></li>
-        <li class="navLi"><a href="createNewEvent.html">Create New Event</a></li>
-        <li class="navLi"><a href="#">My Posts</a></li>
-    </ul>
-</div>
+<div class="article_containter">
 <article>
     <div class="row">
         <h2>Header</h2>
@@ -92,12 +99,13 @@
             </footer>
         </div>
     </article>
-
+</div>
 <footer >
     <div class="the_footer">
     <h3>© 2016 - SocialMegazord inc.</h3>
 </div>
 </footer>
+<script src="scripts/backgroundChange.js"></script>
 </body>
 
 </html>
