--- a/ChangePassword.html
+++ b/ChangePassword.html
@@ -59,7 +59,7 @@
     </ul>
 </div>
 
-<div id="settings">
+<div id="settings2">
     <form class="form-horizontal">
         <fieldset>
             <legend>Change password</legend>
@@ -96,7 +96,7 @@
 </div>
 
 <footer >
-    <div class="the_footer">
+    <div class="the_footer2">
         <h3>© 2016 - SocialMegazord inc.</h3>
     </div>
 </footer>
