--- a/login.html
+++ b/login.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/communities.css">
-    <title>Login</title>
+    <script src="scripts/jquery-3.1.1.min.js"></script>
+    <title>Register</title>
 </head>
 
 <body>
@@ -25,32 +26,32 @@
     </ul>
 </div>
 
-<div id="contents">
-    <a href="Entertainment.html"><button class="button button1"></button></a>
-    <a href="Mutual%20Help.html"><button class="button button2"></button></a>
-    <a href="science.html"><button class="button button3"></button></a>
-</div>
-<div id="navMyProfile">
+<div id="register">
 
-    <div id="login">
-        <form>
-            <div id="inputForm">
-                <label>User name</label><br/><br/>
-                <input type="text" placeholder="User name"><br/><br/>
-            </div>
-            <div id="inputForm">
-                <label>Password</label><br/><br/>
-                <input type="password" placeholder="Password">
-            </div>
-            <input type="submit" value="Log in">
-        </form>
-    </div>
+    <form>
+        <h1>Login Form <br/>
+            <span>Please fill all the texts in the fields.</span>
+        </h1>
+
+
+        <div id="otherRows">
+            <input type="email" pattern="[a-zA-Z0-9_]{3,}@[a-zA-Z0-9_]{3,}.[a-zA-Z0-9_]{2,4}"
+                   placeholder="sample@email.com"	title="Please enter a valid email address">
+            <input type="email" placeholder="Password" required="true" title="Enter password"><br/><br/>
+
+            <center><label>
+                <input type="button" class="button flex-button" value="Login" />
+            </label>
+            </center>
+        </div>
+    </form>
 </div>
 <footer >
     <div class="the_footer">
         <h3>© 2016 - SocialMegazord inc.</h3>
     </div>
 </footer>
-</body>
+<script src="scripts/backgroundChange.js"></script>
 
+</body>
 </html>
