--- a/register.html
+++ b/register.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/communities.css">
+    <script src="scripts/jquery-3.1.1.min.js"></script>
     <title>Register</title>
 </head>
 
@@ -25,20 +26,6 @@
     </ul>
 </div>
 
-
-<button onclick="location.href='http://google.com'" class="button1" type="button" ></button>
-<a href="Mutual%20Help.html"><button class="button2"></button></a>
-<a href="science.html"><button class="button3"></button></a>
-
-<div id="navMyProfile">
-    <style>
-        .navUL {
-            margin-left: 33%;
-            margin-right: 38.9%;
-        }
-    </style>
-
-
     <div id="register">
 
         <form>
@@ -48,7 +35,7 @@
 
 
             <div id="otherRows">
-                <input class="textbox" type="text" placeholder="Nickname" required="true" title="Enter login name">
+                <input class="textbox" type="email" placeholder="Nickname" required="true" title="Enter login name">
                 <input type="email" pattern="[a-zA-Z0-9_]{3,}@[a-zA-Z0-9_]{3,}.[a-zA-Z0-9_]{2,4}"
                        placeholder="sample@email.com"	title="Please enter a valid email address">
                 <input type="email" placeholder="Password" required="true" title="Enter password"><br/><br/>
@@ -230,11 +217,11 @@
 
                 <input type="radio" name="radioBut">Male
                 <input type="radio" name="radioBut">Female<br>
-                <div class="flex">
-                <label>
-                    <input type="button" class="button flex-button" value="Send" />
+
+                <center><label>
+                    <input type="button" class="button flex-button" value="Register" />
                 </label>
-                    </div>
+                    </center>
             </div>
         </form>
     </div>
@@ -243,6 +230,7 @@
             <h3>© 2016 - SocialMegazord inc.</h3>
         </div>
     </footer>
-</body>
+    <script src="scripts/backgroundChange.js"></script>
 
+</body>
 </html>
