In registration new button and changes in comunities.css

--- a/Registration.html
+++ b/Registration.html
@@ -44,7 +44,8 @@
                 <input class=username type="text" placeholder="Username" required="true" title="Enter login name">
                 <input class=email type="email" pattern="[a-zA-Z0-9_]{3,}@[a-zA-Z0-9_]{3,}.[a-zA-Z0-9_]{2,4}"
                        placeholder="sample@email.com"	title="Please enter a valid email address">
-                <input class=password type="password" placeholder="Password" required="true" title="Enter password"><br></br>
+                <input class=password type="password" placeholder="Password" required="true" title="Enter password">
+                <input class=password type="password" placeholder="Confirm Password" required="true" title="Enter password"><br></br>
 
                 <label>
                     <span>&nbsp;</span>
