changed some things

--- a/ChangeUsername.html
+++ b/ChangeUsername.html
@@ -3,10 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/communities.css">
-    <script src="scripts/jquery-3.1.1.min.js"></script>
-    <style>
-        .w3-btn {margin-bottom:10px;}
-    </style>
     <title>Change username</title>
 </head>
 
@@ -33,11 +29,11 @@
                             <ul>
                                 <a href="ChangePassword.html"><li>Change password</li></a>
                                 <a href="ChangeUsername.html"><li>Change username</li></a>
-                                <a href="ChangeImage.html"><li>Change image</li></a>
                             </ul>
                         </div>
                     </li>
-                    <li><a id="page_logout" href="Login.html">Log out</a></li>
+
+                    <li><a id="page_logout" href="#">Log out</a></li>
                 </ul>
             </div>
         </li>
@@ -45,9 +41,9 @@
 </div>
 
 <div id="contents">
-    <a href="Entertainment.html"><button id="button1" class="button button1"></button></a>
-    <a href="science.html"><button id="button3" class="button button3"></button></a>
-    <a href="Mutual%20Help.html"><button id="button2" class="button button2"></button></a>
+    <a href="Entertainment.html"><button class="button button1"></button></a>
+    <a href="Mutual%20Help.html"><button class="button button2"></button></a>
+    <a href="science.html"><button class="button button3"></button></a>
 </div>
 
 <div id="navMyProfile">
@@ -94,6 +90,10 @@
     </form>
 </div>
 
-<script src="scripts/backgroundChange.js"></script>
+<footer>
+    <div class="the_footer">
+        <h3>© 2016 - SocialMegazord inc.</h3>
+    </div>
+</footer>
 </body>
 </html>
