--- a/createnewpost.html
+++ b/createnewpost.html
@@ -70,9 +70,10 @@
         </select>
     </div>
     <br>
+    <label class="lable">Content:</label>
+    <br>
     <div>
-        <label class="lable">Content:</label>
-        <textarea class="content" name="addContent" cols="40" rows="10" placeholder="Enter Content"></textarea>
+        <textarea class="textbox" name="addContent" cols="55" rows="10" placeholder="Enter Content"></textarea>
     </div>
     <br>
     <button class="submitButtons" type="submit" style="margin-left: 13vw;">Submit</button>
