--- a/index.html
+++ b/index.html
@@ -68,5 +68,10 @@
 </div>
 
 <script src="scripts/backgroundChange.js"></script>
+<footer class="the_footer">
+    <h2>
+        © 2016 - SocialMegazord inc.
+    </h2>
+</footer>
 </body>
 </html>
