--- a/myevents.html
+++ b/myevents.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/communities.css">
-    <script src="scripts/jquery-3.1.1.min.js"></script>
     <title>My Events</title>
 </head>
 
@@ -31,11 +30,10 @@
                             <ul>
                                 <a href="ChangePassword.html"><li>Change password</li></a>
                                 <a href="ChangeUsername.html"><li>Change username</li></a>
-                                <a href="ChangeImage.html"><li>Change image</li></a>
                             </ul>
                         </div>
                     </li>
-                    <li><a id="page_logout" href="Login.html">Log out</a></li>
+                    <li><a id="page_logout" href="#">Log out</a></li>
                 </ul>
             </div>
         </li>
@@ -43,38 +41,22 @@
 </div>
 
 <div id="contents">
-    <a href="Entertainment.html"><button id="button1" class="button button1"></button></a>
-    <a href="science.html"><button id="button3" class="button button3"></button></a>
-    <a href="Mutual%20Help.html"><button id="button2" class="button button2"></button></a>
+    <a href="Entertainment.html"><button class="button button1"></button></a>
+    <a href="Mutual%20Help.html"><button class="button button2"></button></a>
+    <a href="science.html"><button class="button button3"></button></a>
 </div>
 
-
 <div id="navMyProfile">
-    <style>
-        .navUL {
-            width: 109%;
-            left: 29%;
-        }
-    </style>
     <ul class="navUL">
         <li class="navLi"><a href="interests.html">Interests</a></li>
         <li class="navLi"><a href="myevents.html">My Events</a></li>
         <li class="navLi"><a href="myvideos.html">My videos</a></li>
     </ul>
 </div>
-
-
-<fieldset  class="eventView">
-    <h2>Event Description</h2>
-    <small>Author here(will user user name)</small><br>
-    <small>Event Place</small><br>
-    <small>Event Type </small><br>
-    <small>date here</small>
-    <p>
-        Additional Content Here Additional Content HereAdditional Content HereAdditional Content HereAdditional Content HereAdditional Content HereAdditional Content Here
-    </p>
-</fieldset>
-
-<script src="scripts/backgroundChange.js"></script>
+<footer >
+    <div class="the_footer">
+        <h3>© 2016 - SocialMegazord inc.</h3>
+    </div>
+</footer>
 </body>
 </html>
