--- a/ChangeImage.html
+++ b/ChangeImage.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/communities.css">
-    <script src="scripts/jquery-3.1.1.min.js"></script>
     <style>
         .w3-btn {margin-bottom:10px;}
     </style>
@@ -37,18 +36,18 @@
                             </ul>
                         </div>
                     </li>
-                    <li><a id="page_logout" href="Login.html">Log out</a></li>
+                    <li><a id="page_self_improve_tool" href="SelfImprove.html">Selfimprove tool</a></li>
+                    <li><a id="page_logout" href="LoggedOut.html">Log out</a></li>
                 </ul>
             </div>
         </li>
     </ul>
 </div>
 
-
 <div id="contents">
-    <a href="Entertainment.html"><button id="button1" class="button button1"></button></a>
-    <a href="science.html"><button id="button3" class="button button3"></button></a>
-    <a href="Mutual%20Help.html"><button id="button2" class="button button2"></button></a>
+    <a href="Entertainment.html"><button class="button button1"></button></a>
+    <a href="Mutual%20Help.html"><button class="button button2"></button></a>
+    <a href="science.html"><button class="button button3"></button></a>
 </div>
 
 <div id="navMyProfile">
@@ -60,15 +59,23 @@
     </ul>
 </div>
 
-<div id="settings">
+<div id="settings2">
     <form class="form-horizontal">
         <fieldset>
             <legend>Change image</legend>
-
+            <img src="http://www.queensquinoa.com/images/default-image.png" alt="No Image View" style="width:300px;height:200px;">
+            <form action="demo_form.asp">
+                <input type="file" name="pic" accept="image/*">
+                <input type="submit">
+            </form>
         </fieldset>
     </form>
 </div>
+<footer >
+    <div class="the_footer2">
+        <h3>© 2016 - SocialMegazord inc.</h3>
+    </div>
+</footer>
 
-<script src="scripts/backgroundChange.js"></script>
 </body>
 </html>
