--- a/Login.html
+++ b/Login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/communities.css">
     <script src="scripts/jquery-3.1.1.min.js"></script>
-    <title>Login</title>
+    <title>Register</title>
 </head>
 
 <body>
@@ -15,10 +15,10 @@
                 <a href ="#" class="name">Register/Login</a>
                 <ul class="menu">
                     <li>
-                        <a href="Registration.html">Register</a>
+                        <a href="#">Register</a>
                     </li>
                     <li>
-                        <a href="Login.html">Login</a>
+                        <a href="#">Login</a>
                     </li>
                 </ul>
             </div>
@@ -26,37 +26,32 @@
     </ul>
 </div>
 
-<div id="navMyProfile">
-    <style>
-        .navUL {
-            margin-left: 33%;
-            margin-right: 38.9%;
-        }
-    </style>
+<div id="register">
 
-    <div id="login">
-        <form>
-            <h1>
-                <span></span>
-            </h1>
+    <form>
+        <h1>Login Form <br/>
+            <span>Please fill all the texts in the fields.</span>
+        </h1>
 
-            <div id="inputForm">
-                <input type="text" placeholder="User name"><br/><br/>
-            </div>
-            <div id="inputForm">
-                <input type="password" placeholder="Password">
-            </div>
-            <input type="submit" value="Log in">
-        </form>
+
+        <div id="otherRows">
+            <input type="email" pattern="[a-zA-Z0-9_]{3,}@[a-zA-Z0-9_]{3,}.[a-zA-Z0-9_]{2,4}"
+                   placeholder="sample@email.com"	title="Please enter a valid email address">
+            <input type="email" placeholder="Password" required="true" title="Enter password"><br/><br/>
+
+            <center><label>
+                <input type="button" class="button flex-button" value="Login" />
+            </label>
+            </center>
+        </div>
+    </form>
+</div>
+<footer >
+    <div class="the_footer">
+        <h3>© 2016 - SocialMegazord inc.</h3>
     </div>
-</div>
-
-<div id="contents">
-    <a href="Entertainment.html"><button id="button1" class="button button1"></button></a>
-    <a href="science.html"><button id="button3" class="button button3"></button></a>
-    <a href="Mutual%20Help.html"><button id="button2" class="button button2"></button></a>
-</div>
-
+</footer>
 <script src="scripts/backgroundChange.js"></script>
+
 </body>
 </html>
