--- a/MyProfile.html
+++ b/MyProfile.html
@@ -30,11 +30,10 @@
                             <ul>
                                 <a href="ChangePassword.html"><li>Change password</li></a>
                                 <a href="ChangeUsername.html"><li>Change username</li></a>
-                                <a href="ChangeImage.html"><li>Change image</li></a>
                             </ul>
                         </div>
                     </li>
-                    <li><a id="page_logout" href="Login.html">Log out</a></li>
+                    <li><a id="page_logout" href="#">Log out</a></li>
                 </ul>
             </div>
         </li>
@@ -44,8 +43,8 @@
 
 <div id="contents">
     <a href="Entertainment.html"><button class="button button1"></button></a>
-    <a href="science.html"><button class="button button3"></button></a>
     <a href="Mutual%20Help.html"><button class="button button2"></button></a>
+    <a href="science.html"><button class="button button3"></button></a>
 </div>
 
 <div id="navMyProfile">
@@ -57,9 +56,9 @@
 </div>
 
 <footer >
-    <h3>© 2016 - SocialMegazord inc.</h3>
+    <div class="the_footer">
+        <h3>© 2016 - SocialMegazord inc.</h3>
+    </div>
 </footer>
-
-
 </body>
 </html>
