--- a/science.html
+++ b/science.html
@@ -2,22 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="css/communities.css">
+    <link rel="stylesheet" type="text/css" href="./css/communities.css">
     <script src="scripts/jquery-3.1.1.min.js"></script>
-    <style>
-        .w3-btn {margin-bottom:10px;}
-    </style>
+
     <title>Science</title>
 </head>
 <style>
     body{
         background-image: url("images/science.png");
         position: relative;
+        background-color: white;
         background-size: cover;
     }
 </style>
 <body>
-<div id="profile_div">
+<header class="nav">
     <ul class="profile-wrapper">
         <li>
             <div class="profile">
@@ -39,31 +38,74 @@
                             <ul>
                                 <a href="ChangePassword.html"><li>Change password</li></a>
                                 <a href="ChangeUsername.html"><li>Change username</li></a>
-                                <a href="ChangeImage.html"><li>Change image</li></a>
+                                <a href="ChangeImage.html"><li>Change profile picture</li></a>
                             </ul>
                         </div>
                     </li>
-                    <li><a id="page_logout" href="Login.html">Log out</a></li>
+                    <li><a id="page_logout" href="#">Log out</a></li>
                 </ul>
             </div>
         </li>
     </ul>
+    <div id="contents">
+        <a href="Entertainment.html"><button id="button1" class="button button1"></button></a>
+        <a href="science.html"><button id="button3" class="button button3"></button></a>
+        <a href="Mutual%20Help.html"><button id="button2" class="button button2"></button></a>
+    </div>
+    <div id="navMyProfile">
+        <ul class="navUL">
+            <li class="navLi"><a href="#">Create New Post</a></li>
+            <li class="navLi"><a href="createNewEvent.html">Create New Event</a></li>
+            <li class="navLi"><a href="#">My Posts</a></li>
+        </ul>
+    </div>
+</header>
+<div class="article_containter">
+    <article>
+        <div class="row">
+            <h2>Header</h2>
+            <small class="author">Bogdan Alov</small>
+            <small class="author">24/11/2016 4:20 </small>
+            <div class="article_position">
+                There's been a fair bit of hype surrounding the latest SpaceX upright rocket landing. Simple as it seems, the excitement Sci-Fi Today, Reality TV Tomorrow, at least for me, stems from how the feat has brought us one step closer to fulfilling our sci-fi fantasies - etched into our minds by the many blockbuster flicks Hollywood has produced. If you can recall one of the opening scenes of The Martian, we witnessed the Mars Ascent Vehicle (MAV) lifting off, attempting to escape an ensuing dust storm. While most of the focus was on the misfortune of Mark Watney - played by Matt Damon, left behind after being struck by debris, you could say we took for granted how easily the MAV ascended into space. Combine the thought of how the MAV got there in the first place, and you have yourself a similar parallel to the SpaceX launch and landing. So what am I gettination. This applies not just to space travel, but every other area of technological advancement.
+            </div>
+            <footer >
+                <button><a href="#">Read more &raquo;</a></button>
+            </footer>
+        </div>
+    </article>
+    <article>
+        <div class="row">
+            <h2>Header</h2>
+            <small class="author">Bogdan Alov</small>
+            <small class="author">24/11/2016 4:20 </small>
+            <div class="article_position">
+                There's been a fair bit of hype surrounding the latest SpaceX upright rocket landing. Simple as it seems, the excitement Sci-Fi Today, Reality TV Tomorrow, at least for me, stems from how the feat has brought us one step closer to fulfilling our sci-fi fantasies - etched into our minds by the many blockbuster flicks Hollywood has produced. If you can recall one of the opening scenes of The Martian, we witnessed the Mars Ascent Vehicle (MAV) lifting off, attempting to escape an ensuing dust storm. While most of the focus was on the misfortune of Mark Watney - played by Matt Damon, left behind after being struck by debris, you could say we took for granted how easily the MAV ascended into space. Combine the thought of how the MAV got there in the first place, and you have yourself a similar parallel to the SpaceX launch and landing. So what am I gettination. This applies not just to space travel, but every other area of technological advancement.
+            </div>
+            <footer >
+                <button><a href="#">Read more &raquo;</a></button>
+            </footer>
+        </div>
+    </article>
+    <article>
+        <div class="row">
+            <h2>Header</h2>
+            <small class="author">Bogdan Alov</small>
+            <small class="author">24/11/2016 4:20 </small>
+            <div class="article_position">
+                There's been a fair bit of hype surrounding the latest SpaceX upright rocket landing. Simple as it seems, the excitement Sci-Fi Today, Reality TV Tomorrow, at least for me, stems from how the feat has brought us one step closer to fulfilling our sci-fi fantasies - etched into our minds by the many blockbuster flicks Hollywood has produced. If you can recall one of the opening scenes of The Martian, we witnessed the Mars Ascent Vehicle (MAV) lifting off, attempting to escape an ensuing dust storm. While most of the focus was on the misfortune of Mark Watney - played by Matt Damon, left behind after being struck by debris, you could say we took for granted how easily the MAV ascended into space. Combine the thought of how the MAV got there in the first place, and you have yourself a similar parallel to the SpaceX launch and landing. So what am I gettination. This applies not just to space travel, but every other area of technological advancement.
+            </div>
+            <footer >
+                <button><a href="#">Read more &raquo;</a></button>
+            </footer>
+        </div>
+    </article>
 </div>
-
-<div id="contents">
-    <a href="Entertainment.html"><button id="button1" class="button button1"></button></a>
-    <a href="science.html"><button id="button3" class="button button3"></button></a>
-    <a href="Mutual%20Help.html"><button id="button2" class="button button2"></button></a>
-</div>
-
-<div id="navMyProfile">
-    <ul class="navUL">
-        <li class="navLi"><a href="createnewpost.html">Create New Post</a></li>
-        <li class="navLi"><a href="createNewEvent.html">Create New Event</a></li>
-        <li class="navLi"><a href="#">My Posts</a></li>
-    </ul>
-</div>
-
+<footer >
+    <div class="the_footer">
+        <h3>© 2016 - SocialMegazord inc.</h3>
+    </div>
+</footer>
 <script src="scripts/backgroundChange.js"></script>
 </body>
 
