--- a/Login.html
+++ b/Login.html
@@ -37,7 +37,7 @@
         <div id="otherRows">
             <input type="email" pattern="[a-zA-Z0-9_]{3,}@[a-zA-Z0-9_]{3,}.[a-zA-Z0-9_]{2,4}"
                    placeholder="sample@email.com"	title="Please enter a valid email address">
-            <input type="email" placeholder="Password" required="true" title="Enter password"><br/><br/>
+            <input type="password" placeholder="Password" required="true" title="Enter password"><br/><br/>
 
             <center><label>
                 <input type="button" class="button flex-button" value="Login" />
