--- a/Login.html
+++ b/Login.html
@@ -15,7 +15,7 @@
                 <a href ="#" class="name">Register/Login</a>
                 <ul class="menu">
                     <li>
-                        <a href="#">Register</a>
+                        <a href="Registration.html">Register</a>
                     </li>
                     <li>
                         <a href="#">Login</a>
