Added EditPost.html abd EditUsers.html

--- a/EditPost.html
+++ b/EditPost.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./css/communities.css">
-    <title>Edit Events</title>
+    <title>Edit Posts</title>
 </head>
 <body>
 <div id="profile_div">
@@ -77,11 +77,11 @@
         </div>
     </article>
 
-<footer >
-    <div class="the_footer">
-        <h3>© 2016 - SocialMegazord inc.</h3>
-    </div>
-</footer>
+    <footer >
+        <div class="the_footer">
+            <h3>© 2016 - SocialMegazord inc.</h3>
+        </div>
+    </footer>
 </div>
 </body>
 </html>
