--- a/EditUsers.html
+++ b/EditUsers.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./css/communities.css">
-    <title>Edit Events</title>
+    <title>Edit Users</title>
 </head>
 <body>
 <div id="profile_div">
@@ -52,36 +52,19 @@
 <div class="article_containter">
 
 
-    <article>
-        <div class="row">
-            <small class="author">Bogdan Alov</small>
-            <small class="author">24/11/2016 4:20 </small>
-            <div class="article_position">
-                Today at 5pm at the Mall Sofia meeting with firends.
-            </div>
+
             <footer >
                 <button>Edit</button>
             </footer>
-        </div>
-    </article>
-    <article>
-        <div class="row">
-            <small class="author">Bogdan Alov</small>
-            <small class="author">30/11/2016 18:20 </small>
-            <div class="article_position">
-                Today at 6am in softUni meeting for Project.
-            </div>
-            <footer >
-                <button>Edit</button>
-            </footer>
+
         </div>
     </article>
 
-<footer >
-    <div class="the_footer">
-        <h3>© 2016 - SocialMegazord inc.</h3>
-    </div>
-</footer>
+    <footer >
+        <div class="the_footer">
+            <h3>© 2016 - SocialMegazord inc.</h3>
+        </div>
+    </footer>
 </div>
 </body>
 </html>
