Changes in comunities.css and EditEvents

--- a/EditEvents.html
+++ b/EditEvents.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="./css/communities.css">
+    <link rel="stylesheet" type="text/css" href="css/communities.css">
+    <script src="scripts/jquery-3.1.1.min.js"></script>
+
     <title>Edit Events</title>
 </head>
 <body>
@@ -76,11 +78,12 @@
             </footer>
         </div>
     </article>
-
+</div>
 <footer >
     <div class="the_footer">
         <h3>© 2016 - SocialMegazord inc.</h3>
     </div>
 </footer>
+    <script src="scripts/backgroundChange.js"></script>
 </body>
 </html>
