Fixed EditEvents.html and EditPost.html

--- a/EditPost.html
+++ b/EditPost.html
@@ -17,7 +17,7 @@
                         <div class="horizontal_menu">
                             <ul>
                                 <a href="interests.html"><li>Interests</li></a>
-                                <a href="myevents.html"><li>My events</li></a>
+                                <a href=".html"><li>My events</li></a>
                                 <a href="myvideos.html"><li>My videos</li></a>
                             </ul>
                         </div>
@@ -44,8 +44,8 @@
 </div>
 <div id="navMyProfile">
     <ul class="navUL">
-        <li class="navLi"><a href="interests.html">Edit Users</a></li>
-        <li class="navLi"><a href="myevents.html">Edit Posts</a></li>
+        <li class="navLi"><a href="EditUsers.html">Edit Users</a></li>
+        <li class="navLi"><a href="EditPost.html">Edit Posts</a></li>
         <li class="navLi"><a href="EditEvents.html">Edit Events</a></li>
     </ul>
 </div>
