--- a/EditEvents.html
+++ b/EditEvents.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="css/communities.css">
-    <script src="scripts/jquery-3.1.1.min.js"></script>
-
+    <link rel="stylesheet" type="text/css" href="./css/communities.css">
     <title>Edit Events</title>
 </head>
 <body>
@@ -78,15 +76,12 @@
             </footer>
         </div>
     </article>
-</div>
+
 <footer >
     <div class="the_footer">
         <h3>© 2016 - SocialMegazord inc.</h3>
     </div>
 </footer>
-
-    <script src="scripts/backgroundChange.js"></script>
-
-
+</div>
 </body>
 </html>
