--- a/EditEvents.html
+++ b/EditEvents.html
@@ -56,11 +56,12 @@
         <div class="row">
             <small class="author">Bogdan Alov</small>
             <small class="author">24/11/2016 4:20 </small>
+            <small class="author">Plaza</small>
             <div class="article_position">
                 Today at 5pm at the Mall Sofia meeting with firends.
             </div>
             <footer >
-                <button>Edit</button>
+                <button class="submitButtons">Edit</button>
             </footer>
         </div>
     </article>
@@ -72,7 +73,7 @@
                 Today at 6am in softUni meeting for Project.
             </div>
             <footer >
-                <button>Edit</button>
+                <button class="submitButtons">Edit</button>
             </footer>
         </div>
     </article>
