--- a/editInterest.html
+++ b/editInterest.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/communities.css">
-    <title>Change Password</title>
+    <title>Edit Interests</title>
 </head>
 
 <body>
+
 <div id="profile_div">
     <ul class="profile-wrapper">
         <li>
@@ -44,48 +45,30 @@
     <a href="Mutual%20Help.html"><button class="button button2"></button></a>
     <a href="science.html"><button class="button button3"></button></a>
 </div>
-
 <div id="navMyProfile">
-    <style>
-        .navUL {
-            margin-left: 33%;
-            margin-right: 38.9%;
-        }
-    </style>
     <ul class="navUL">
-        <li class="navLi"><a href="ChangeUsername.html">Change username</a></li>
-        <li class="navLi"><a href="ChangePassword.html">Change password</a></li>
-        <li class="navLi"><a href="ChangeImage.html">Change image</a></li>
+        <li class="navLi"><a href="interests.html">Back</a></li>
+        <li class="navLi"><a href="myevents.html">My Events</a></li>
+        <li class="navLi"><a href="myvideos.html">My videos</a></li>
     </ul>
 </div>
-
-<div>
-    <form class="formEvent">
-        <div><label class="lable">Current Password: </label>
-            <input type="password" class="content2" placeholder="">
+<div class="formEvent">
+        <div>
+            <label class="lable">What are your Interests: </label>
         </div>
         <br>
-        <div><label class="lable">New Password: </label>
-            <input type="password" placeholder="">
-        </div>
-        <br>
-        <div><label class="lable">Repeat Password: </label>
-            <input type="password" placeholder="">
+        <div><textarea name="edinInterests" id="" cols="30" rows="10">tyska she sedi neshto ako ima</textarea>
         </div>
         <br>
         <div>
-            <a href="Settings.html"><button type="button" class="submitButtons">Cancel</button></a>
-            <button class="submitButtons" type="submit">Update</button>
+            <a href="interests.html"><button class="submitButtons">Cancel</button></a>
+            <button class="submitButtons" type="submit">Update</button></a>
         </div>
-    </form>
+    <footer >
+        <div class="the_footer">
+            <h3>© 2016 - SocialMegazord inc.</h3>
+        </div>
+    </footer>
 </div>
-<script src="scripts/backgroundChange.js"></script>
-</div>
-
-<footer >
-    <div class="the_footer2">
-        <h3>© 2016 - SocialMegazord inc.</h3>
-    </div>
-</footer>
 </body>
 </html>
