--- a/editEventOptions.html
+++ b/editEventOptions.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="css/communities.css">
-    <title>Create New Event</title>
+    <link rel="stylesheet" type="text/css" href="./css/communities.css">
+    <script src="scripts/jquery-3.1.1.min.js"></script>
+    <title>Event Options</title>
 </head>
-
+<style>
+    body{
+        background-image: url("images/entertainment.jpg");
+        position: relative;
+        background-color: white;
+        background-size: cover;
+    }
+</style>
 <body>
-
-<div id="profile_div">
+<header class="nav">
     <ul class="profile-wrapper">
         <li>
             <div class="profile">
-                <a href ="index.html" class="name">UserExample</a>
+                <a href ="index.html" class="name" class="username">UserExample</a>
                 <ul class="menu">
                     <li>
-                        <a href="MyProfile.html">My profile</a>
+                        <a href="#">My profile</a>
                         <div class="horizontal_menu">
                             <ul>
                                 <a href="interests.html"><li>Interests</li></a>
-                                <a href="myEvents.html"><li>My events</li></a>
-                                <a href="myVideos.html"><li>My videos</li></a>
+                                <a href="myevents.html"><li>My events</li></a>
+                                <a href="myvideos.html"><li>My videos</li></a>
                             </ul>
                         </div>
                     </li>
@@ -30,6 +37,7 @@
                             <ul>
                                 <a href="ChangePassword.html"><li>Change password</li></a>
                                 <a href="ChangeUsername.html"><li>Change username</li></a>
+                                <a href="ChangeImage.html"><li>Change profile picture</li></a>
                             </ul>
                         </div>
                     </li>
@@ -38,21 +46,19 @@
             </div>
         </li>
     </ul>
-</div>
-<div id="contents">
-    <a href="Entertainment.html"><button class="button button1"></button></a>
-    <a href="Mutual%20Help.html"><button class="button button2"></button></a>
-    <a href="science.html"><button class="button button3"></button></a>
-</div>
-
-<div id="navMyProfile">
-    <ul class="navUL">
-        <li class="navLi"><a href="interests.html">Interests</a></li>
-        <li class="navLi"><a href="myevents.html">My Events</a></li>
-        <li class="navLi"><a href="index.html">Posts</a></li>
-    </ul>
-</div>
-
+    <div id="contents">
+        <a href="Entertainment.html"><button id="button1" class="button button1"></button></a>
+        <a href="science.html"><button id="button3" class="button button3"></button></a>
+        <a href="Mutual%20Help.html"><button id="button2" class="button button2"></button></a>
+    </div>
+    <div id="navMyProfile">
+        <ul class="navUL">
+            <li class="navLi"><a href="createnewpost.html">Create New Post</a></li>
+            <li class="navLi"><a href="createNewEvent.html">Create New Event</a></li>
+            <li class="navLi"><a href="myevents.html">Events</a></li>
+        </ul>
+    </div>
+</header>
 <form class="formEvent">
     <div class="eventType" >
         <label class="lable">Choose Type: </label>
@@ -85,13 +91,14 @@
     </div>
     <br>
     <a href="myevents.html"><button class="submitButtons" type="reset">Cancel</button></a>
-    <button class="submitButtons" type="submit">Submit</button>
+    <button class="submitButtons" type="submit">Update</button>
 </form>
-
 <footer >
     <div class="the_footer">
         <h3>© 2016 - SocialMegazord inc.</h3>
     </div>
 </footer>
+<script src="scripts/backgroundChange.js"></script>
 </body>
+
 </html>
