added SOME EVENTS ;

--- a/design/createNewEvent.html
+++ b/design/createNewEvent.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en" >
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/communities.css">
+    <script src="scripts/jquery-3.1.1.min.js"></script>
     <title>Create New Event</title>
 </head>
 
@@ -93,5 +94,6 @@
         <h3>© 2016 - SocialMegazord inc.</h3>
     </div>
 </footer>
+<script src="scripts/backgroundChange.js"></script>
 </body>
 </html>
