new working page about us

--- a/design/AboutUs.html
+++ b/design/AboutUs.html
@@ -3,29 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/communities.css">
-    <title>Team</title>
+    <script src="scripts/jquery-3.1.1.min.js"></script>
+    <title>Our Team</title>
 </head>
 <style>
     img {
 border-radius: 50%;
 width: 15vw;
 height: 10vw;
+
 }
+
 p.groove {border-style: groove;}
+
 </style>
-<body>
+
+
     <header>
         <center>
             <h1 class="header"><em>Social Megazord Team:</em></h1>
         </center>
     </header>
 
-    <main>
-    </main>
-    <footer>
-        <div class="the_footer">
-            <h3>© 2016 - SocialMegazord inc.</h3>
-        </div>
-    </footer>
+
+
+    <body  background="images/3.jpg">
+    <button class="submitButtons">Back</button>
+    <a  href="https://www.facebook.com/ani.anastasova.5" target="_blank"> <img src="images/annie.jpg" class="myImage" style="width:304px;height:228px; padding-top: 20px;
+    padding-right: 20px; margin-left: 100px;"></a>
+    <a  href="https://www.facebook.com/alovbg?fref=ts" target="_blank"> <img src="images/bogi.jpg" class="myImage" style="width:304px;height:228px; padding-top: 20px;
+    padding-right: 20px; margin-left: 60px;"></a>
+    <a  href="https://www.facebook.com/sasho.avramow?fref=ts" target="_blank"> <img src="images/aleks.jpg" class="myImage" style="width:304px;height:228px; padding-top: 20px;
+    padding-right: 20px; margin-left: 60px;"></a>
+    <a  href="https://www.facebook.com/profile.php?id=100002343396522&fref=ts" target="_blank"> <img src="images/ivo.jpg" class="myImage" style="width:304px;height:228px; padding-top: 20px;
+    padding-right: 20px; margin-left: 100px;"></a>
+    <a  href="https://www.facebook.com/radostinnaa?fref=ts" target="_blank"> <img src="images/radost.jpg" class="myImage" style="width:304px;height:228px; padding-top: 20px;
+    padding-right: 20px; margin-left: 60px;"></a>
+    <a  href="https://www.facebook.com/hristian.yanew.7?fref=ts" target="_blank"> <img src="images/hristian.jpg" class="myImage" style="width:304px;height:228px; padding-top: 20px;
+    padding-right: 20px; margin-left: 60px;"></a>
+
+        <!--<img src="images/annie.jpg" class="myImage" style="width:304px;height:228px; padding-top: 20px;-->
+    <!--padding-right: 20px; margin-left: 60px;">-->
+        <!--<img src="images/annie.jpg" class="myImage" style="width:304px;height:228px; padding-top: 20px;-->
+    <!--padding-right: 20px; margin-left: 60px;">-->
+        <!--<img src="images/annie.jpg" class="myImage" style="width:304px;height:228px; padding-top: 20px;-->
+    <!--padding-right: 20px; margin-left: 100px;">-->
+        <!--<img src="images/annie.jpg" class="myImage" style="width:304px;height:228px; padding-top: 20px;-->
+    <!--padding-right: 20px; margin-left: 60px;">-->
+        <!--<img src="images/annie.jpg" class="myImage" style="width:304px;height:228px; padding-top: 20px;-->
+    <!--padding-right: 20px; margin-left: 60px;">-->
+
+
+
+
+    <script src="scripts/backgroundChange.js"></script>
+
+<footer >
+
+    <div class="the_footer2">
+        <h3>© 2016 - SocialMegazord inc.</h3>
+    </div>
+</footer>
 </body>
+
+
 </html>
